--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <!-- Attachment point for your app -->
     <div id="container"></div>
-    <script src="./client.bundle?platform=vr"></script>
+    <script src="./build/client.bundle?platform=vr"></script>
     <script>
       // Initialize the React 360 application
       React360.init(
